// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`selectableCardField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n45j"
        data-checked="false"
        data-disabled="false"
        data-error="false"
        data-type="radio"
        role="button"
        style="--uv_1d8tbmb3: 1; --uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="uv_17da2jl0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
        >
          <div
            aria-disabled="false"
            class="uv_475tndd uv_17da2jl4 uv_17da2jl2"
            data-checked="false"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              class="uv_17da2jla"
              id="_r_2_"
              name="test"
              tabindex="-1"
              type="radio"
              value="test"
            />
            <svg
              class="uv_17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="uv_17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="uv_17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="uv_17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="uv_17da2jl7 uv_17da2jl5 uv_17da2jl8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
              for="_r_2_"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="uv_475tndb uv_xf61n40 uv_xf61n42d"
          data-has-default-cursor="false"
          data-has-label="false"
          style="--uv_1d8tbmb0: 100%;"
        >
          Radio field
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should render correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n45j"
        data-checked="true"
        data-disabled="false"
        data-error="false"
        data-type="radio"
        role="button"
        style="--uv_1d8tbmb3: 1; --uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="uv_17da2jl0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
        >
          <div
            aria-disabled="false"
            class="uv_475tndd uv_17da2jl4 uv_17da2jl2"
            data-checked="true"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              checked=""
              class="uv_17da2jla"
              id="_r_i_"
              name="test"
              tabindex="-1"
              type="radio"
              value="checked"
            />
            <svg
              class="uv_17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="uv_17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="uv_17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="uv_17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="uv_17da2jl7 uv_17da2jl5 uv_17da2jl8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
              for="_r_i_"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="uv_475tndb uv_xf61n40 uv_xf61n42d"
          data-has-default-cursor="false"
          data-has-label="false"
          style="--uv_1d8tbmb0: 100%;"
        >
          Radio field checked
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n45j"
        data-checked="false"
        data-disabled="true"
        data-error="false"
        data-type="radio"
        role="button"
        style="--uv_1d8tbmb3: 1; --uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
      >
        <div
          class="uv_17da2jl0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
        >
          <div
            aria-disabled="true"
            class="uv_475tndd uv_17da2jl4 uv_17da2jl2"
            data-checked="false"
            data-invalid="false"
          >
            <input
              aria-disabled="true"
              class="uv_17da2jla"
              disabled=""
              id="_r_a_"
              name="test"
              tabindex="-1"
              type="radio"
              value="disabled"
            />
            <svg
              class="uv_17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="uv_17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="uv_17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="uv_17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="uv_17da2jl7 uv_17da2jl5 uv_17da2jl8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
              for="_r_a_"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="uv_475tndb uv_xf61n40 uv_xf61n42d"
          data-has-default-cursor="false"
          data-has-label="false"
          style="--uv_1d8tbmb0: 100%;"
        >
          Radio field disabled
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should render correctly with errors 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n45j"
        data-checked="false"
        data-disabled="false"
        data-error="true"
        data-type="radio"
        role="button"
        style="--uv_1d8tbmb3: 1; --uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="uv_17da2jl0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
        >
          <div
            aria-disabled="false"
            class="uv_475tndd uv_17da2jl4 uv_17da2jl2"
            data-checked="false"
            data-invalid="true"
          >
            <input
              aria-disabled="false"
              class="uv_17da2jla"
              id="_r_12_"
              name="test"
              tabindex="-1"
              type="radio"
              value="checked"
            />
            <svg
              class="uv_17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="uv_17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="uv_17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="uv_17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="uv_17da2jl7 uv_17da2jl5 uv_17da2jl8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
              for="_r_12_"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="uv_475tndb uv_xf61n40 uv_xf61n42d"
          data-has-default-cursor="false"
          data-has-label="false"
          style="--uv_1d8tbmb0: 100%;"
        >
          Radio field error
        </div>
      </div>
      <button
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should trigger events correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n45j"
        data-checked="true"
        data-disabled="false"
        data-error="false"
        data-type="radio"
        role="button"
        style="--uv_1d8tbmb3: 1; --uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="uv_17da2jl0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
        >
          <div
            aria-disabled="false"
            class="uv_475tndd uv_17da2jl4 uv_17da2jl2"
            data-checked="true"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              class="uv_17da2jla"
              id="_r_q_"
              name="test"
              tabindex="-1"
              type="radio"
              value="events"
            />
            <svg
              class="uv_17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="uv_17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="uv_17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="uv_17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="uv_17da2jl7 uv_17da2jl5 uv_17da2jl8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
              for="_r_q_"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="uv_475tndb uv_xf61n40 uv_xf61n42d"
          data-has-default-cursor="false"
          data-has-label="false"
          style="--uv_1d8tbmb0: 100%;"
        >
          Radio field events
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
